# Calcul-prime-d-assurance

./: .dockerignore  .env.example  .gitignore  2.2_Preprocessing_models.ipynb  Dockerfile  Détails-du-projet.txt  README.md  README_architecture.md  alembic.ini  docker-compose.yml  package-lock.json  prime_pred_sandbox.csv  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy-cloud-run.yml
alembic/: env.py
alembic/versions/: 20260320_0001_api_persistence.py  20260323_0002_quotes.py  20260323_0003_auth_and_admin.py  20260323_0004_remove_quote_email_deliveries.py  20260411_0005_remove_prediction_input_index.py  20260412_0006_email_verification_and_quote_updates.py
artifacts/: README.md  cat_cols.csv  dataset_meta.json  ensemble_weights_v1.json  feature_cols.csv  finalist_runs.csv  folds_primary.parquet  folds_secondary.parquet  run_registry.csv  selected_configs.json  shakeup_ensemble.parquet  shakeup_single.parquet  submission_v1.csv  y_train_targets.parquet
artifacts/models/: registry.csv
artifacts/v2/: ensemble_weights_v2.json  run_registry_stage1.csv  run_registry_stage2.csv  selected_models_v2.csv  selection_report_v2.csv  (+1 more)
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
configs/: inference_default.json  train_lb_challenger.json  train_robust.json  train_smoke.json
data/: prime_pred_sandbox.csv
docs/: deploy_cloud_run.md  github_only_deploy.md
notebooks/: 01_eda_cv_design.ipynb  02_feature_engineering_v2.ipynb  02_modeling_3_engines.ipynb  03.0_ensemble_submission.ipynb  03_ensemble_submission.ipynb  03_objective_screening_v2.ipynb  04_modeling_3_engines_v2.ipynb  04_modeling_3_engines_v2_optimized.ipynb  05_ensemble_robustness_v2.ipynb  06_submission_report_v2.ipynb  07_ds_cadrage_qualite_cv.ipynb  08_ds_eda_segmentation_preprocessing.ipynb  09_ds_model_diagnostics_storytelling.ipynb  INDEX.md  MANIFEST.csv  README_ds.md  README_v1.md  README_v2.md
projet_interessant/: 1.0_Pretraitement.ipynb  Descriptif_données.ods  README.md
scripts/: check_import_graph.py  evaluate.py  execute_notebooks_full.py  export_ds_outputs.py  export_openapi.py  export_vehicle_catalog.py  make_submission.py  predict.py  run_end_to_end.py  smoke_web_app.py  train.py  validate_repo_structure.py
src/: __init__.py  ds_analysis_utils.py  v1_pipeline.py  v2_pipeline.py  v2_pipeline_optimized.py
tests/: conftest.py  test_account_emailing.py  test_api.py  test_api_integration_postgres.py  test_architecture_hygiene.py  test_compat_imports.py  test_console_scripts.py  test_data_contract.py  test_ds_exports.py  test_end_to_end_script.py  test_git_code_only_contract.py  test_import_graph_contract.py  test_import_health.py  test_inference_submission.py  test_notebook_bootstrap_contract.py  test_notebook_execution_full_subset.py  test_notebook_execution_smoke.py  test_notebook_import_paths.py  test_notebook_manifest.py  test_notebook_public_contract.py  test_quote_emailing.py  test_runtime_persistence.py  test_settings.py  test_splits.py  test_training_and_pickles.py  test_unused_cleanup_contract.py
tools/: generate_ds_notebooks.py  generate_v1_notebooks.py  generate_v2_notebooks.py
web/: .dockerignore  Dockerfile  README.md  next.config.ts  openapi-ts.config.mjs  openapi.json  package.json
web/app/: globals.css  (+2 more)
(+203 files in other folders)
